[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,4 +1,10 @@
-<body>
+<html>
+    <head>
+        <title>
+            article-two | sandy
+        </title>
+    </head>
+    <body>
         <div>
             <a href="/">home</a>
         </div>
