--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,7 +5,10 @@
         </title>
         <style>
             .container{
+                max-width: 800px
                 margin: 0 auto;
+                color: gray;
+                font-family: sans-serif;
             }
         </style>
     </head>
