--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,7 +3,7 @@
         <title>
             article-one | sandy
         </title>
-        <meta name="viewport" content="width=device-vidth initial-scale=1" />
+        <meta name="viewport" content="width=device-width initial-scale=1" />
         <style>
             .container{
                 max-width: 800px
