--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,13 @@
         <meta name="viewport" content="width=device-width initial-scale=1" />
         <style>
             .container{
-                max-width: 800px
-                margin: 0 auto;
-                color: gray;
+                max-width: 800px;
+                color: #774242;
                 font-family: sans-serif;
+                margin: 0 auto;
+                padding-top: 52px;
+                padding-left: 24px;
+                padding-right: 24px;
             }
         </style>
     </head>
