--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,22 +3,35 @@
         <title>
             article-two | sandy
         </title>
+        <style>
+            .container{
+                max-width: 800px;
+                color: #774242;
+                font-family: sans-serif;
+                margin: 0 auto;
+                padding-top: 52px;
+                padding-left: 24px;
+                padding-right: 24px;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">home</a>
-        </div>
-        <br/>
-        <h2>
-            this is article two.
-        </h2>
-        <div>
-            20 dec 2017.
-        </div>
-        
-        <div>
-            <p>
-                hey guys, this is my second article.. im rahul.
-            </p>
+        <div class="container">
+            <div>
+                <a href="/">home</a>
+            </div>
+            <br/>
+            <h2>
+                this is article two.
+            </h2>
+            <div>
+                20 dec 2017.
+            </div>
+            
+            <div>
+                <p>
+                    hey guys, this is my second article.. im rahul.
+                </p>
+            </div>
         </div>
     </body>
