--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,17 +3,7 @@
         <title>
             article-two | sandy
         </title>
-        <style>
-            .container{
-                max-width: 800px;
-                color: #774242;
-                font-family: sans-serif;
-                margin: 0 auto;
-                padding-top: 52px;
-                padding-left: 24px;
-                padding-right: 24px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
