--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am sandeep and this is my first web app.
         </div>
         <script>
-            alert('hi, i\'m java script.');
+            alert('hi, i\'m important javascript.');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
